--- a/guoyw-base-support-uuid/pom.xml
+++ b/guoyw-base-support-uuid/pom.xml
@@ -7,16 +7,11 @@
     <artifactId>guoyw-famework</artifactId>
     <version>1.0</version>
   </parent>
-  <artifactId>guoyw-base</artifactId>
+  <artifactId>guoyw-base-support-uuid</artifactId>
   <packaging>jar</packaging>
-  <name>guoyw-base</name>
-
+  <name>guoyw-base-support-uuid</name>
 
   <dependencies>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency>
-  </dependencies>
 
+  </dependencies>
 </project>
