--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,18 @@
       <version>2.9.2</version>
     </dependency>
 
+    <!-- google Java项目广泛依赖 的核心库 -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>27.1-jre</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
