--- a/guoyw-base/pom.xml
+++ b/guoyw-base/pom.xml
@@ -17,6 +17,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.guoyw</groupId>
+      <artifactId>guoyw-utils</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
