--- a/guoyw-framework-test/pom.xml
+++ b/guoyw-framework-test/pom.xml
@@ -23,7 +23,7 @@
     </dependency>
     <dependency>
       <groupId>com.guoyw</groupId>
-      <artifactId>guoyw-base</artifactId>
+      <artifactId>guoyw-base-support-uuid</artifactId>
     </dependency>
 
   </dependencies>
