--- a/guoyw-base-support-uuid/pom.xml
+++ b/guoyw-base-support-uuid/pom.xml
@@ -12,6 +12,18 @@
   <name>guoyw-base-support-uuid</name>
 
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
 
+    <dependency>
+      <groupId>com.guoyw</groupId>
+      <artifactId>guoyw-base-support-id</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.guoyw</groupId>
+      <artifactId>guoyw-utils</artifactId>
+    </dependency>
   </dependencies>
 </project>
