--- a/guoyw-base-support-uuid/pom.xml
+++ b/guoyw-base-support-uuid/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.guoyw</groupId>
-    <artifactId>guoyw-famework</artifactId>
+    <groupId>com.guoyw.framework</groupId>
+    <artifactId>guoyw-framework</artifactId>
     <version>1.0</version>
   </parent>
   <artifactId>guoyw-base-support-uuid</artifactId>
