--- a/guoyw-framework-test/pom.xml
+++ b/guoyw-framework-test/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.guoyw</groupId>
-    <artifactId>guoyw-famework</artifactId>
+    <groupId>com.guoyw.framework</groupId>
+    <artifactId>guoyw-framework</artifactId>
     <version>1.0</version>
   </parent>
 
@@ -22,8 +22,12 @@
       <artifactId>mysql-connector-java</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.guoyw</groupId>
+      <groupId>com.guoyw.framework</groupId>
       <artifactId>guoyw-base-support-uuid</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.guoyw.framework</groupId>
+      <artifactId>guoyw-api-versioning</artifactId>
     </dependency>
 
   </dependencies>
