--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,12 @@
     <module>guoyw-base-support-id</module>
     <module>guoyw-base-support-uuid</module>
     <module>guoyw-utils</module>
-    <module>guoyw-api-versioning</module>
+    <module>guoyw-starter-api-versioning</module>
     <module>guoyw-starter-exception</module>
+    <module>guoyw-shiro</module>
+    <module>guoyw-starter-shiro</module>
+    <module>guoyw-auth</module>
+    <module>guoyw-starter-auth-password</module>
     <module>guoyw-framework-test</module>
 
   </modules>
@@ -55,12 +59,32 @@
       </dependency>
       <dependency>
         <groupId>com.guoyw.framework</groupId>
-        <artifactId>guoyw-api-versioning</artifactId>
+        <artifactId>guoyw-starter-api-versioning</artifactId>
         <version>${guoyw.version}</version>
       </dependency>
       <dependency>
         <groupId>com.guoyw.framework</groupId>
         <artifactId>guoyw-starter-exception</artifactId>
+        <version>${guoyw.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.guoyw.framework</groupId>
+        <artifactId>guoyw-shiro</artifactId>
+        <version>${guoyw.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.guoyw.framework</groupId>
+        <artifactId>guoyw-starter-shiro</artifactId>
+        <version>${guoyw.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.guoyw.framework</groupId>
+        <artifactId>guoyw-auth</artifactId>
+        <version>${guoyw.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.guoyw.framework</groupId>
+        <artifactId>guoyw-starter-auth-password</artifactId>
         <version>${guoyw.version}</version>
       </dependency>
       <dependency>
