--- a/guoyw-base/pom.xml
+++ b/guoyw-base/pom.xml
@@ -18,7 +18,7 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.guoyw</groupId>
+      <groupId>com.guoyw.framework</groupId>
       <artifactId>guoyw-utils</artifactId>
     </dependency>
   </dependencies>
