--- a/guoyw-framework-test/src/main/resources/application.yml
+++ b/guoyw-framework-test/src/main/resources/application.yml
@@ -13,3 +13,16 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL55Dialect
+
+  # Redis数据源
+  redis:
+    host: 47.102.192.148
+    port: 6379
+    timeout: 6000
+    password: guoyw_redis
+    jedis:
+      pool:
+        max-active: 1000  # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1      # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 10      # 连接池中的最大空闲连接
+        min-idle: 5       # 连接池中的最小空闲连接
