--- a/guoyw-framework-test/pom.xml
+++ b/guoyw-framework-test/pom.xml
@@ -33,6 +33,9 @@
       <groupId>com.guoyw.framework</groupId>
       <artifactId>guoyw-starter-shiro</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>com.guoyw.framework</groupId>
+      <artifactId>guoyw-starter-swagger</artifactId>
+    </dependency>
   </dependencies>
 </project>
